# mutable_url.py

./: .editorconfig  README.md  main.py  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
src/mutable_url/: __init__.py
tests/: test_mutable_url.py
