[project]
name = "mutable-url"
version = "1.0.1"
description = "MutableURL class for editing URLs"
readme = "README.md"
license = "ISC"
authors = [
  { name="Phil Pennock", email="python-pkgs@pennock-tech.com" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Topic :: Internet",
]
keywords = [
  "url", "mutability", "mutable"
]

requires-python = ">=3.10"
dependencies = []

[project.urls]
repository = "https://github.com/PennockTech/mutable_url.py"
issues = "https://github.com/PennockTech/mutable_url.py/issues"

[build-system]
# uv 0.11.0 is out, nothing for us incompatible, extend range instead of forcing client upgrades
# (although 0.11 is currently newer than our tool.uv.exclude-newer)
requires=["uv_build>=0.10.0,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "ruff",
  "ty",

  "pytest",
  "tox",
  "tox-uv",
]

[tool.ruff]
target-version = "py310"

[tool.tox]
requires = ["tox-uv>=1.25"]
env_list = ["py310", "py311", "py312", "py313", "py314"]

[tool.uv]
# We don't have regular dependencies, and so this affects only the dev dependencies and shouldn't affect downstream users of the library.
exclude-newer = "3 days"
